--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,50 +1,77 @@
-header {
-  font-weight: bold;
-  color: navy;
+* {
+  font-family: sans-serif;
+  padding: 3px;
+  font: 10px;
 }
-h1 {
-  color: blue;
-}
-h2 {
-  color: red;
-  font-size: 30px;
-}
-h3 {
-  color: black;
-}
-li {
-  font-weight: bold;
-  border-style: solid;
-  width: 180px;
-}
-img {
-  width: 200px; height: 225px;
-    }
-img {
-  float: right;
-}
-footer {
-  font-size: 10px;
-      }
-.DataQ {
-  font-family : sans-serif;
-  font-size : 18px;
-  width : 300px;
-  border : black solid 10px;
-  padding : 35px;
-  margin : 20px;
-  background-color: #ffffff;
+.Title1 {
+    font-size: 20px;
+    color: white;
+    width; 300px;
+    margin: 20px 15px 20px 15px;
+    position: absolute;
+    z-index: 1;
+        }
+.bannerimg {
+  position:absolute;
+  width: 80%;
+  z-index: -1;
   }
-.links
-    {
-      font-style: italic;
-      font-size: 15px;
-      width : 300px;
-      border : black solid 10px;
-      padding : 35px;
-      margin : 15px;
-      background-color: #ffffff;
-          }
-body {
-background-color : #CCFFE5;
+.introparagraph {
+    font-size: 13px;
+      }
+.Menuheader {
+  color: white;
+  text-align: left;
+  padding-right: 5px;
+  font-size: 13px;
+  }
+h2 {
+  font-size: 1rem;
+  }
+.sideinfo {
+font-size: 13px;
+float: right;
+width: 30%;
+padding: 10px;
 }
+a {
+  font-size: 13px;
+  color: #00CCCC;
+  }
+.story {
+  font-size: 13px;
+  color: #00CCCC;
+  margin-left: 30px;
+}
+.storysection {
+  font-size: 13px;
+  }
+h3 {
+  font-size: 13px;
+  color: white;
+  text-align:center;
+}
+.Rates {
+    font-weight: bold;
+    font-size: 12px;
+  }
+.footerpic {
+  position: absolute;
+  width: 95%;
+  margin-bottom: 10%;
+  z-index: -1;
+ }
+ .navbar {
+   font-size: 13px;
+   color: white;
+   text-align: center;
+ }
+ .Menufooter {
+   color: white;
+   align-content: center;
+   z-index: 1;
+     }
+ .bottomcopyright {
+    color: white;
+    text-align: center;
+   }
